# tawala

./: .gitignore  .prettierignore  .prettierrc  .python-version  LICENSE  README.md  TODO.md  package-lock.json  package.json  publish.py  pyproject.toml
.github/triggers/: publish.py
.github/workflows/: package.yaml  publish.yaml  publish.yml  release.yaml
docs/: README.md
olyv/addresses/: views.py
olyv/addresses/migrations/: 0001_initial.py
olyv/base/: models.py
olyv/base/templatetags/: base_tags.py
olyv/lists/: urls.py
olyv/lists/migrations/: 0001_initial.py
olyv/settings/: asgi.py  conf.py  wsgi.py
src/: publish.py
src/djangx/cli/: execute_from_package_dir.py  execute_from_project_dir.py  manage.py
src/djangx/scripts/: apps.py
src/djangx/templates/default/: pyproject.toml
src/djangx/templates/default/app/: forms.py  models.py  urls.py  views.py
src/djangx/templates/default/app/migrations/: 0001_initial.py
src/djangx/templates/default/app/templates/app/: home.html
src/djangx/templates/default/config/: settings.py  urls.py
src/djangx/templates/default/resources/: .gitignore
src/djangx/ui/: apps.py
src/djangx/utils/: apps.py
src/djangx/utils/auth/: backends.py  mixins.py
src/djangx/utils/models/: fields.py
src/example/: .gitignore  package.json  pyproject.toml  tailwind.css
src/example/app/: apps.py  urls.py  views.py
src/example/app/static/: app.css
src/example/app/static/app/: .gitignore  global.css  index.css  source.css
src/example/app/static/app/css/: global.css  source.css
src/example/app/templates/app/: home.html
src/olyv/: utils.py
src/olyv/accounts/migrations/: 0001_initial.py
src/olyv/addresses/: api.http  views.py
src/olyv/articles/: models.py
src/olyv/articles/migrations/: 0001_initial.py
src/olyv/base/: adminsite.py  context_processors.py  mixins.py
src/olyv/base/templatetags/: title.py
src/olyv/conf/: settings.py  urls.py
src/olyv/lists/: views.py
src/tawala/: __init__.py  apps.py  cli.py  helpers.py  settings.py
src/tawala/admin/: __init__.py
src/tawala/api/: __init__.py  asgi.py  cli.py  wsgi.py
src/tawala/app/settings/: config.py  main.py
src/tawala/backends/: storage.py
src/tawala/cli/: manage.py
src/tawala/components/: __init__.py  apps.py
src/tawala/components/templatetags/: components.py
src/tawala/components/ui/: apps.py
src/tawala/components/utils/: apps.py
src/tawala/conf/: base.py  checks.py  config.py  postload.py  pre.py  preload.py  settings.py  types.py  urls.py
src/tawala/conf/management/: config.py  fields.py  path.py  types.py
src/tawala/config/: __init__.py  commands.py  conf.py  databases.py  email.py  org.py  project.py  security.py  site.py  social_media.py  storages.py  tailwindcss.py
src/tawala/core/: __init__.py  admin.py  apps.py  manage.py  urls.py
src/tawala/core/__api__/: asgi.py  wsgi.py
src/tawala/core/__app__/: apps.py
src/tawala/core/admin/: __init__.py
src/tawala/core/api/: asgi.py  cli.py  wsgi.py
src/tawala/core/app/: config.py  postsettings.py  presettings.py  settings.py
src/tawala/core/backends/: auth.py  storage.py
src/tawala/core/conf/: config.py  post.py  pre.py  settings.py
src/tawala/core/forms/: mixins.py
src/tawala/core/management/: arts.py  enums.py  types.py  utils.py
src/tawala/core/mixins/: models.py
src/tawala/management/: art.py  cli.py  run.py
src/tawala/management/backends/: storages.py
src/tawala/management/commands/: collectstatic.py  copy.py  generate.py  runbuild.py  runinstall.py  runserver.py  tailwind.py  tailwindcss.py
src/tawala/management/settings/: __init__.py  apps.py  auth.py  base.py  conf.py  contactinfo.py  databases.py  email.py  generate.py  org.py  runcommands.py  security.py  social.py  storages.py  tailwind.py  urls.py
src/tawala/management/templatetags/: contactinfo.py  org.py  security.py  social.py  tailwind.py  urls.py
src/tawala/management/types/: __init__.py  apps.py  base.py  conf.py  contactinfo.py  databases.py  org.py  social.py  storages.py
src/tawala/management/utils/: cli.py  constants.py  wsgi.py
src/tawala/scripts/: apps.py  create_project.py  deploy.py  execute_from_package_dir.py  execute_from_project_dir.py  execute_from_tawala_package_dir.py  generaterandom.py  new.py
src/tawala/settings/: __init__.py  commands.py  conf.py  config.py  contact.py  main.py  org.py  pkg.py  security.py  tailwind.py  urls.py
src/tawala/static/: .gitignore
src/tawala/templates/: .gitignore  tawala.html
src/tawala/templates/default/: .gitignore  manage.py  pyproject.toml
src/tawala/templates/default/app/: admin.py  apps.py  forms.py  models.py
src/tawala/templates/default/app/fixtures/app/: init.yaml
src/tawala/templates/default/app/migrations/: 0001_initial.py
src/tawala/templates/default/app/static/app/: global.scss
src/tawala/templates/default/config/: asgi.py  settings.py  urls.py  wsgi.py
src/tawala/templates/tawala/: base.html  global.html
src/tawala/templates/vendors/: aos.html  bootstrap-icons.html  tailwindcss.html
src/tawala/templates/widgets/: preloader.html  scroll-top.html
src/tawala/templatetags/: app.py  contact.py  org.py  pkg.py  security.py  site.py  social_media.py  tailwind.py  tailwindcss.py  urls.py
src/tawala/ui/: admin.py  apps.py  urls.py
src/tawala/ui/templatetags/: base.py  contactinfo.py  social.py  tailwind.py  (+3 more)
src/tawala/utils/: admin.py  apps.py  helpers.py  models.py
(+129 files in other folders)
