[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project]
name = "tawala"
version = "1.0.5.dev2"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "christianwhocodes", email = "kevin@tawalabora.space" }]
requires-python = ">=3.12"
dependencies = [
    "django>=6.0rc1",
    "django-browser-reload>=1.21.0",
    "django-watchfiles>=1.4.0",
    "pillow>=12.0.0",
    "pyperclip>=1.11.0",
]

[project.urls]
homepage = "https://github.com/tawalabora/tawala#readme"
repository = "https://github.com/tawalabora/tawala"
issues = "https://github.com/tawalabora/tawala/issues"

[project.scripts]
tawala = "tawala.cli:main"

[dependency-groups]
dev = ["djlint>=1.36.4", "psycopg[binary,pool]>=3.2.13", "vercel>=0.3.5"]

[tool.djlint]
ignore = "H016"
blank_line_after_tag = "load,extends"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
