[project]
name = "tawala_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"psycopg[binary,pool]>=3.2.12",
	"tawala>=0.2.0",
]

[dependency-groups]
dev = ["djlint>=1.36.4"]

[tool.djlint]
ignore = "H016"
blank_line_after_tag = "load,extends"
